--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
+  razorpay_flutter: ^1.2.7
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
