--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   razorpay_flutter: ^1.2.7
   fluttertoast: ^8.0.8
+  barcode_scan: ^2.0.1
+  qr_flutter: ^3.2.0
 
 dev_dependencies:
   flutter_test:
