--- a/my_app/android/app/src/main/AndroidManifest.xml
+++ b/my_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_app">
+    package="com.example.robomills"
+    xmlns:tools="http://schemas.android.com/tools">
+    
+    <uses-sdk tools:overrideLibrary="io.github.edufolly.flutterbluetoothserial"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+   
    <application
-        android:label="my_app"
+        android:label="robomills"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
