--- a/my_app/android/app/src/main/AndroidManifest.xml
+++ b/my_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.robomills"
+    package="com.example.my_app"
     xmlns:tools="http://schemas.android.com/tools">
     
     <uses-sdk tools:overrideLibrary="io.github.edufolly.flutterbluetoothserial"/>
@@ -38,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.apptreesoftware.barcodescan.BarcodeScannerActivity"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
