--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fluttertoast: ^8.0.8
   barcode_scan: ^2.0.1
   qr_flutter: ^3.2.0
+  google_maps_flutter: ^1.0.3
 
 dev_dependencies:
   flutter_test:
